--- a/portfolio.html
+++ b/portfolio.html
@@ -99,12 +99,49 @@
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
                 <div class="portfolio-cover-wrap">
-                  <img
-                    src="./images/portfolio1.jpg"
-                    alt="Banking App"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/portfolio/img1_desk_1x_360.jpg 1x,
+                        ./images/portfolio/img1_desk_2x_360.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/portfolio/img1_desk_1x_360.jpg 1x,
+                        ./images/portfolio/img1_desk_2x_360.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/portfolio/img1_tab_1x_356.jpg 1x,
+                        ./images/portfolio/img1_tab_2x_356.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <source
+                      media="(max-width: 767.98px)"
+                      srcset="
+                        ./images/portfolio/img1_mob_1x_396.jpg 1x,
+                        ./images/portfolio/img1_mob_2x_396.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      class="portfolio-img"
+                      src="./images/portfolio/img1_mob_1x_396.jpg"
+                      alt="Banking App"
+                      width="396"
+                      height="280"
+                      loading="lazy"
+                    />
+                  </picture>
+
                   <div class="portfolio-cover-text">
                     <p>
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -124,12 +161,41 @@
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
                 <div class="portfolio-cover-wrap">
-                  <img
-                    src="./images/portfolio2.jpg"
-                    alt="Cashless Payment"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/portfolio/img2_desk_1x_360.jpg 1x,
+                        ./images/portfolio/img2_desk_2x_360.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/portfolio/img2_tab_1x_356.jpg 1x,
+                        ./images/portfolio/img2_tab_2x_356.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <source
+                      media="(max-width: 767.98px)"
+                      srcset="
+                        ./images/portfolio/img2_mob_1x_396.jpg 1x,
+                        ./images/portfolio/img2_mob_2x_396.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      class="portfolio-img"
+                      src="./images/portfolio/img2_mob_1x_396.jpg"
+                      alt="Cashless Payment"
+                      width="396"
+                      height="280"
+                      loading="lazy"
+                    />
+                  </picture>
+
                   <div class="portfolio-cover-text">
                     <p>
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -147,12 +213,41 @@
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
                 <div class="portfolio-cover-wrap">
-                  <img
-                    src="./images/portfolio3.jpg"
-                    alt="Meditaion App"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/portfolio/img3_desk_1x_360.jpg 1x,
+                        ./images/portfolio/img3_desk_2x_360.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/portfolio/img3_tab_1x_356.jpg 1x,
+                        ./images/portfolio/img3_tab_2x_356.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <source
+                      media="(max-width: 767.98px)"
+                      srcset="
+                        ./images/portfolio/img3_mob_1x_396.jpg 1x,
+                        ./images/portfolio/img3_mob_2x_396.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      class="portfolio-img"
+                      src="./images/portfolio/img3_mob_1x_396.jpg"
+                      alt="Meditaion App"
+                      width="396"
+                      height="280"
+                      loading="lazy"
+                    />
+                  </picture>
+
                   <div class="portfolio-cover-text">
                     <p>
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -170,12 +265,40 @@
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
                 <div class="portfolio-cover-wrap">
-                  <img
-                    src="./images/portfolio4.jpg"
-                    alt="Taxi Service"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/portfolio/img4_desk_1x_360.jpg 1x,
+                        ./images/portfolio/img4_desk_2x_360.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/portfolio/img4_tab_1x_356.jpg 1x,
+                        ./images/portfolio/img4_tab_2x_356.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <source
+                      media="(max-width: 767.98px)"
+                      srcset="
+                        ./images/portfolio/img4_mob_1x_396.jpg 1x,
+                        ./images/portfolio/img4_mob_2x_396.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      class="portfolio-img"
+                      src="./images/portfolio/img4_mob_1x_396.jpg"
+                      alt="Taxi Service"
+                      width="396"
+                      height="280"
+                      loading="lazy"
+                    />
+                  </picture>
                   <div class="portfolio-cover-text">
                     <p>
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -193,12 +316,40 @@
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
                 <div class="portfolio-cover-wrap">
-                  <img
-                    src="./images/portfolio5.jpg"
-                    alt="Screen Illustrations"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/portfolio/img5_desk_1x_360.jpg 1x,
+                        ./images/portfolio/img5_desk_2x_360.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/portfolio/img5_tab_1x_356.jpg 1x,
+                        ./images/portfolio/img5_tab_2x_356.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <source
+                      media="(max-width: 767.98px)"
+                      srcset="
+                        ./images/portfolio/img5_mob_1x_396.jpg 1x,
+                        ./images/portfolio/img5_mob_2x_396.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      class="portfolio-img"
+                      src="./images/portfolio/img5_mob_1x_396.jpg"
+                      alt="Screen Illustrations"
+                      width="396"
+                      height="280"
+                      loading="lazy"
+                    />
+                  </picture>
                   <div class="portfolio-cover-text">
                     <p>
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -216,12 +367,40 @@
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
                 <div class="portfolio-cover-wrap">
-                  <img
-                    src="./images/portfolio6.jpg"
-                    alt="Online Courses"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/portfolio/img6_desk_1x_360.jpg 1x,
+                        ./images/portfolio/img6_desk_2x_360.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/portfolio/img6_tab_1x_356.jpg 1x,
+                        ./images/portfolio/img6_tab_2x_356.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <source
+                      media="(max-width: 767.98px)"
+                      srcset="
+                        ./images/portfolio/img6_mob_1x_396.jpg 1x,
+                        ./images/portfolio/img6_mob_2x_396.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      class="portfolio-img"
+                      src="./images/portfolio/img6_mob_1x_396.jpg"
+                      alt="Online Courses"
+                      width="396"
+                      height="280"
+                      loading="lazy"
+                    />
+                  </picture>
                   <div class="portfolio-cover-text">
                     <p>
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -239,12 +418,40 @@
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
                 <div class="portfolio-cover-wrap">
-                  <img
-                    src="./images/portfolio7.jpg"
-                    alt="Instagram Stories Concept"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/portfolio/img7_desk_1x_360.jpg 1x,
+                        ./images/portfolio/img7_desk_2x_360.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/portfolio/img7_tab_1x_356.jpg 1x,
+                        ./images/portfolio/img7_tab_2x_356.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <source
+                      media="(max-width: 767.98px)"
+                      srcset="
+                        ./images/portfolio/img7_mob_1x_396.jpg 1x,
+                        ./images/portfolio/img7_mob_2x_396.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      class="portfolio-img"
+                      src="./images/portfolio/img7_mob_1x_396.jpg"
+                      alt=" Instagram Stories Concept"
+                      width="396"
+                      height="280"
+                      loading="lazy"
+                    />
+                  </picture>
                   <div class="portfolio-cover-text">
                     <p>
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -264,12 +471,40 @@
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
                 <div class="portfolio-cover-wrap">
-                  <img
-                    src="./images/portfolio8.jpg"
-                    alt="Organic Food"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/portfolio/img8_desk_1x_360.jpg 1x,
+                        ./images/portfolio/img8_desk_2x_360.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/portfolio/img8_tab_1x_356.jpg 1x,
+                        ./images/portfolio/img8_tab_2x_356.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <source
+                      media="(max-width: 767.98px)"
+                      srcset="
+                        ./images/portfolio/img8_mob_1x_396.jpg 1x,
+                        ./images/portfolio/img8_mob_2x_396.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      class="portfolio-img"
+                      src="./images/portfolio/img8_mob_1x_396.jpg"
+                      alt="Organic Food"
+                      width="396"
+                      height="280"
+                      loading="lazy"
+                    />
+                  </picture>
                   <div class="portfolio-cover-text">
                     <p>
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -287,12 +522,40 @@
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
                 <div class="portfolio-cover-wrap">
-                  <img
-                    src="./images/portfolio9.jpg"
-                    alt="Fresh Coffee"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/portfolio/img9_desk_1x_360.jpg 1x,
+                        ./images/portfolio/img9_desk_2x_360.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/portfolio/img9_tab_1x_356.jpg 1x,
+                        ./images/portfolio/img9_tab_2x_356.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <source
+                      media="(max-width: 767.98px)"
+                      srcset="
+                        ./images/portfolio/img9_mob_1x_396.jpg 1x,
+                        ./images/portfolio/img9_mob_2x_396.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      class="portfolio-img"
+                      src="./images/portfolio/img9_mob_1x_396.jpg"
+                      alt="Fresh Coffee"
+                      width="396"
+                      height="280"
+                      loading="lazy"
+                    />
+                  </picture>
                   <div class="portfolio-cover-text">
                     <p>
                       14 Stylish and User-Friendly App Design Concepts · Task
